@@ -1,3 +1,3 @@
 @echo off
-java -Xmx1G -XX:+UseConcMarkSweepGC -jar -Dfile.encoding=UTF-8 spigot-1.16.3.jar nogui
+java -Xmx1G -jar -Dfile.encoding=UTF-8 spigot-1.16.3.jar nogui
 pause
